metadata/force-app/main/default/objects/CustomName_gUvmL__c/CustomName_gUvmL__c.object-meta.xml
<CustomObject>
    <description>Description_gWeCW</description>
    <label>CustomLabel_YXJaC</label>
    <nameField>
        <label>CustomLabel_YXJaC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_YXJaCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>