metadata/force-app/main/default/objects/CustomName_gUvmL__c/fields/CustomField_hTivs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_hTivs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldrnsHm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>